--- a/templates/item_list.html
+++ b/templates/item_list.html
@@ -9,9 +9,10 @@
     <div>
         {% for item in items %}
             <div class="item">
-                <a href="{{ item.url }}">
+                <a href="{{ url_for('item', name_url=item.url) }}">
                     <img src="{{ item.image }}">
                     <h3>{{ item.name }}</h3>
+                    <p>${{ item.price }}</p>
                 </a>
             </div>
         {% endfor %}
