Move url out of database, generate and translate in server. Add cart links, button improvements

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -13,5 +13,12 @@
             </a>
         {% endfor %}
     </div>
+    <div>
+        {% if items %}
+            <button>Checkout</button>
+        {% else %}
+            <button disabled>Checkout</button>
+        {% endif %}
+    </div>
 </body>
 </html>
