--- a/templates/item_list.html
+++ b/templates/item_list.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <a href="{{ url_for('cart') }}"><h3>Shopping Cart</h3></a>
     <h1>For Sale:</h1>
     <div>
         {% for item in items %}
