Rough working first draft Integrate ORM Add shopping cart functionality Move cart to user session

--- a/templates/item.html
+++ b/templates/item.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <a href="{{ url_for('cart') }}"><h3>Shopping Cart</h3></a>
+    <a href="{{ url_for('home') }}"><h3>For Sale</h3></a>
+
     <div class="item_info">
         <img src="{{ item.image }}">
         <h3>{{ item.name }}</h3>
@@ -15,19 +17,20 @@
     </div>
     <div class="buy_item">
         <h4>{{ amount_in_cart }}</h4>
-        {% if item.available > 0 %}
+        {% if item.available != 0 %}
             <form action="{{ url_for('add', item_id=item.id) }}" method="post" class="add-to-cart">
                 <button>Add to Cart</button>
             </form>
         {% else %}
             <button disabled>Add to Cart</button>
         {% endif %}
-        {% if amount_in_cart > 0 %}
+        {% if amount_in_cart == 0 %}
+            <button disabled>Remove from Cart</button>
+
+        {% else %}
             <form action="{{ url_for('remove', item_id=item.id) }}" method="post" class="add-to-cart">
                 <button>Remove from Cart</button>
             </form>
-        {% else %}
-            <button disabled>Remove from Cart</button>
         {% endif %}
     </div>
 
