--- a/templates/item.html
+++ b/templates/item.html
@@ -3,35 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ item.name }}</title>
-
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@200&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="{{ url_for('cart') }}"><h3>Shopping Cart</h3></a>
-    <a href="{{ url_for('home') }}"><h3>For Sale</h3></a>
-
-    <div class="item_info">
-        <img src="{{ item.image }}">
-        <h3>{{ item.name }}</h3>
-        <h3>${{ item.price }}</h3>
-        <p>{{ item.description }}</p>
+    <div class="box">
+        <a href="{{ url_for('cart') }}"><h3>Shopping Cart &#128722</h3></a>
+        <a href="{{ url_for('home') }}"><h3>Back to Shop</h3></a>
     </div>
-    <div class="buy_item">
-        <h4>{{ amount_in_cart }}</h4>
-        {% if item.available != 0 %}
-            <form action="{{ url_for('add', item_id=item.id) }}" method="post" class="add-to-cart">
-                <button>Add to Cart</button>
-            </form>
-        {% else %}
-            <button disabled>Add to Cart</button>
-        {% endif %}
-        {% if amount_in_cart == 0 %}
-            <button disabled>Remove from Cart</button>
 
-        {% else %}
-            <form action="{{ url_for('remove', item_id=item.id) }}" method="post" class="add-to-cart">
-                <button>Remove from Cart</button>
-            </form>
+
+    <div class="box" id="item-view">
+        <h1 class="name">{{ item.name }}</h1>
+        <p class="box item-description">{{ item.description }}</p>
+        <h4 class="amount">{{ amount_in_cart }} in cart </h4>
+        <h3 class="price">${{ item.price }}</h3>
+        {% if amount_in_cart %}
+            <h3 class="total">${{ item.price|float * amount_in_cart }}</h3>
         {% endif %}
+        <div class="buy-item">
+            {% if item.available != 0 %}
+                <form action="{{ url_for('add', source='item', item_id=item.id) }}" method="post" class="add-to-cart">
+                    <button>Add to Cart</button>
+                </form>
+            {% else %}
+                <button disabled>Add to Cart</button>
+            {% endif %}
+            {% if amount_in_cart == 0 %}
+                <button disabled>Remove from Cart</button>
+
+            {% else %}
+                <form action="{{ url_for('remove', source='item', item_id=item.id) }}" method="post" class="add-to-cart">
+                    <button>Remove from Cart</button>
+                </form>
+            {% endif %}
+        </div>
+        <a href="{{ url_for('home') }}" class="back"><h3>Back to Shop</h3></a>
+        <img src="{{ item.image }}"/>
     </div>
 
 </body>
