--- a/templates/cart.html
+++ b/templates/cart.html
@@ -7,23 +7,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@200&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
-
 </head>
 <body>
-    <div class="box">
-        <a href="{{ url_for('home') }}"><h3>Back to Shop</h3></a>
+    <nav class="container-wide">
         <h2>&#128722 Shopping Cart:</h2>
-    </div>
+        <a href="{{ url_for('home') }}"><h3>Back to Shop</h3></a>
+        <div></div>
+    </nav>
+
     <div class="box" id="cart">
         {% if items %}
             {% for item in items %}
-                <div class="box container">
+                <div class="box container item cart-item">
                     <a href="{{url_for('item', name_url=item.url)}}">
                         <img src="static/placeholder.png">
                     </a>
                     <a href="{{url_for('item', name_url=item.url)}}">
                         <h3>{{ item.name}}</h3>
                     </a>
+                    <h4>${{ item.price }}</h4>
                     <div class="container" id="cart_interaction">
                         <form action="{{ url_for('remove', source='cart', item_id=item.id) }}" method="post" class="add-to-cart">
                             <button>-</button>
@@ -48,6 +50,7 @@
         {% endif %}
     </div>
     <div class="box">
+        <h2>Cart Total: ${{ cart_total }}</h2>
         <form method="POST" action="{{ url_for('create_checkout_session') }}">
         {% if items %}
             <button>Checkout</button>
