--- a/templates/item_list.html
+++ b/templates/item_list.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@300&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="box">
-        <a href="{{ url_for('cart') }}"><h3>Shopping Cart &#128722</h3></a>
+    <nav class="container-wide">
         <h1>For Sale:</h1>
-    </div>
+        <a href="{{ url_for('cart') }}"><h3>Shopping Cart &#128722 ${{ cart_total }}</h3></a>
+    </nav>
     <div class="container" id="item-list">
         {% for item in items %}
-            <div class="item, box">
+            <div class="item box">
                 <a href="{{ url_for('item', name_url=item.url) }}">
                     <img src="{{ item.image }}"/>
                     <h3>{{ item.name }}</h3>
