--- a/templates/item.html
+++ b/templates/item.html
@@ -5,7 +5,7 @@
     <title>{{ item.name }}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@200&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@200&family=Open+Sans&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
@@ -15,11 +15,8 @@
         <a href="{{ url_for('cart') }}"><h3>Shopping Cart &#128722 ${{ cart_total }}</h3></a>
     </nav>
 
-
-
     <div class="box" id="item-view">
-<!--        <h1 class="name">{{ item.name }}</h1>-->
-        <h1 id="name">{{ item.name }}</h1>
+        <h1 class="name" id="name">{{ item.name }}</h1>
         <p class="item-description">{{ item.description }}</p>
         <h4 class="amount">{{ amount_in_cart }} in cart </h4>
         <h3 class="price">${{ item.price }}</h3>
