--- a/templates/item_list.html
+++ b/templates/item_list.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" href="static/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@300&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@200&family=Open+Sans&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="container-wide">
-        <h1>For Sale:</h1>
+        <h1 class="name">For Sale:</h1>
         <a href="{{ url_for('cart') }}"><h3>Shopping Cart &#128722 ${{ cart_total }}</h3></a>
     </nav>
     <div class="container" id="item-list">
         {% for item in items %}
-            <div class="item box">
+            <div class="item box" id="{{ item.id }}">
                 <a href="{{ url_for('item', name_url=item.url) }}">
                     <img src="{{ item.image }}"/>
-                    <h3>{{ item.name }}</h3>
+                    <h3 class="name">{{ item.name }}</h3>
                 </a>
                 <div class="container-wide">
-                    <p>${{ item.price }}</p>
+                    <p class="price">${{ item.price }}</p>
                     <div class="container" id="cart_interaction">
                         {% if item.id|string in cart_dict %}
                             <form action="{{ url_for('remove', source='home', item_id=item.id) }}" method="post" class="add-to-cart">
