--- a/templates/success.html
+++ b/templates/success.html
@@ -3,6 +3,10 @@
 <head>
   <title>Thanks for your order!</title>
   <link rel="stylesheet" href="static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@200&family=Open+Sans&family=Passion+One&family=Scope+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <nav class="container-wide">
